--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p>
       <div class=container>
       <div class=box>
-      <a href="https://sillygoose333.github.io/golfballpersona/" style="text-decoration: none">
+      <a href="https://macstackrory.github.io/persona/" style="text-decoration: none">
       <h2 style="color:SeaGreen; font-family: 'Lucida Console';""> Understanding the Consumer </h2>
       <img src="sketch.png">
 
